--- a/src/app/agents/page.html
+++ b/src/app/agents/page.html
@@ -65,7 +65,7 @@
                 alt="Yugiri"
                 width="400"
                 loading="lazy"
-                data-name="TUGIRI"
+                data-name="YUGIRI"
               />
               <p>YUGIRI</p>
             </a>
