--- a/src/app/agents/routes/Michele.html
+++ b/src/app/agents/routes/Michele.html
@@ -21,7 +21,7 @@
       <img src="/public/agents/michele/Michele.webp" alt="Michele" width="400" />
       <div class="title">
         <h1>Michele</h1>
-        <div class="sub-titles">
+        <div class="subtitles">
           <p class="active" data-role="about">ABOUT</p>
           <p data-role="skills">SKILLS</p>
           <p data-role="weapons">WEAPONS</p>
