--- a/src/app/mechanics/page.html
+++ b/src/app/mechanics/page.html
@@ -6,6 +6,7 @@
     <title>Mechanics | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
+    <link rel="stylesheet" type="text/css" href="mechanic.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -16,23 +17,29 @@
         <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
       </div>
     </nav>
-
-    <h2>Stringify</h2>
-    <p>
-      Stringification allows you to change your dimensional forms. Use it strategically while reloading, dodging, and
-      moving to unlock endless tactical possibilities.
-    </p>
-    <h2>Tips</h2>
-    <p>you can climb walls faster by spamming in and out of stringification</p>
-    <p>
-      Use the fact that it's a third person shooter game and get infomation by hiding behind walls and looking at them
-      using your third person
-    </p>
-    <p>
-      For every character but sniper make sure you get sheild on round 2, even if it means that you have to sell your
-      previous upgrade
-    </p>
-    <p>Make sure you change what grenades you use based on the characeter and the map,</p>
+    <div class="gradient-box"></div>
+    <div class="mechanics">
+      <div class="stringify">
+        <h2 class="stringify-title">STRINGIFY</h2>
+        <p>
+          Stringification allows you to change your dimensional forms. Use it strategically while reloading, dodging, and
+          moving to unlock endless tactical possibilities.
+        </p>
+      </div>
+      <div class="tips">
+        <h2 class="tip-title">TIPS</h2>
+        <p>you can climb walls faster by spamming in and out of stringification</p>
+        <p>
+          Use the fact that it's a third person shooter game and get infomation by hiding behind walls and looking at them
+          using your third person
+        </p>
+        <p>
+          For every character but sniper make sure you get sheild on round 2, even if it means that you have to sell your
+          previous upgrade
+        </p>
+        <p>Make sure you change what grenades you use based on the characeter and the map,</p>
+      </div>
+    </div>
     <footer>
       <span>henryphanisthebest@gmail.com</span>
       <span>©2025 - 2030IDS/KSH. ALL RIGHTS RESERVED.</span>
