--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -122,6 +122,7 @@ footer {
     background-color: #1A1B20;
     color: var(--color-base-content);
     position: relative;
+    border-top: 2px #80a4d4 solid;
 }
 
 .m-auto {
