--- a/src/app/agents/routes/Michele.html
+++ b/src/app/agents/routes/Michele.html
@@ -6,150 +6,170 @@
     <title>Michele | Strinova Fan Page</title>
     <link rel="icon" href="/public/facion.ico" type="image/x-icon" />
     <link rel="stylesheet" type="text/css" href="/src/app/globals.css" />
-    <link rel="stylesheet" type="text/css" href="pus-agent.css" />
+    <link rel="stylesheet" type="text/css" href="../pus-agent.css" />
   </head>
   <body>
     <nav class="navbar">
       <div class="main"><a href="/src/app/index.html">STRINOVA</a></div>
       <div class="sub">
-        <div><a href="/src/app/agents/page.html">AGENTS</a></div>
-        <div><a href="/src/app/maps/page.html">MAPS</a></div>
-        <div><a href="/src/app/mechanics/page.html">MECHANICS</a></div>
+        <a href="/src/app/agents/page.html">AGENTS</a>
+        <a href="/src/app/maps/page.html">MAPS</a>
+        <a href="/src/app/mechanics/page.html">MECHANICS</a>
       </div>
     </nav>
 
-    <div class="all">
-      <div id="agent">
-        <img class="symbol" src="/public/bg/pus-symbol.png">
-        <img class="agent-img" src="/public/agents/michele/Michele.webp" alt="Michele" width="400" />
-        <div class="title">
-          <h1>MICHELE</h1>
-          <div class="subtitles">
-            <p class="active" data-role="about">ABOUT</p>
-            <p data-role="skills">SKILLS</p>
-            <p data-role="weapons">WEAPONS</p>
-            <p data-role="upgrades">UPGRADES</p>
-          </div>
-        </div>
+    <div class="agent">
+      <div class="agent-image-container">
+        <img class="agent-symbol" src="/public/bg/pus-symbol.png" width="500" />
+        <img class="agent-image" src="/public/agents/michele/Michele.webp" alt="Michele" width="500" />
       </div>
       <div class="main">
-        <div  id="about-information" data-role="about">
-          <h3>Role: Senitinel</h3>
-          <p>
-           Michele is a rookie P.U.S investigator in the world of strinova. She is a gamer that applies her gaming to her
-          job as a investigtor. Michele is guided by her seniors Kokona and Nobunaga. Michele loves cat and uses cat
-            robots to fight the enemies, these are also known as Pawtector and Mighty Meow. She wishes to become a admired
-            hero like her father who under unknown circumstances has fallen for collpase syndrome.
-          </p>
+        <h1 class="title">MICHELE</h1>
+        <div class="subtitles">
+          <button data-role="about">ABOUT</button>
+          <button data-role="skills">SKILLS</button>
+          <button data-role="weapons">WEAPONS</button>
+          <button data-role="upgrades">UPGRADES</button>
         </div>
-       <div id="skills">
-        <div class="skill-images" data-role="skills">
-          <img src="/public/agents/michele/Michele active skill.webp" data-role="active-skill"  alt="Michele ActiveSkill" />
-          <img src="/public/agents/michele/Michele passive.webp" data-role="passive-skill" alt="Michele PassiveSkill" />
-          <img src="/public/agents/michele/Michele Ultimate Skill.webp" data-role="ultimate-skill" alt="Michele UltimateSkill" />
-       </div>
-        <div class="skill-title">
-          <p data-role="about-skill">ABOUT</p>
-          <p data-role="deatils">DETAILS</p>
-          <p data-role="video">VIDEO</p>
-        </div>
-        <div id="active-skill" data-role="active-skill" >
-          <div class="active-about" data-role="about-skill">
-            <h3>Pawtector</h3>
-            <p>Type: damage</p>
+        <div>
+          <div id="about">
+            <h3>Role: Senitinel</h3>
             <p>
-              Michele depolys a Pawtector that can stick to any surfaces from a certain range. The Pawtector will
-              automatically attack the enemy once they get into the range of the pawtector. The Pawtector will deactive once
-              michele reaches a certain range away from it.
+              Michele is a rookie P.U.S investigator in the world of strinova. She is a gamer that applies her gaming to
+              her job as a investigtor. Michele is guided by her seniors Kokona and Nobunaga. Michele loves cat and uses
+              cat robots to fight the enemies, these are also known as Pawtector and Mighty Meow. She wishes to become a
+              admired hero like her father who under unknown circumstances has fallen for collpase syndrome.
             </p>
+          </div>
+          <div id="skills" class="skills">
+            <div class="skill-images">
+              <img
+                src="/public/agents/michele/Michele active skill.webp"
+                data-role="active-skill"
+                alt="Michele ActiveSkill"
+              />
+              <img
+                src="/public/agents/michele/Michele passive.webp"
+                data-role="passive-skill"
+                alt="Michele PassiveSkill"
+              />
+              <img
+                src="/public/agents/michele/Michele Ultimate Skill.webp"
+                data-role="ultimate-skill"
+                alt="Michele UltimateSkill"
+              />
+            </div>
+            <div class="skill-title">
+              <button data-role="about">ABOUT</button>
+              <button data-role="details">DETAILS</button>
+              <button data-role="video">VIDEO</button>
+            </div>
+            <div>
+              <div id="active-skill">
+                <div id="about">
+                  <div class="active-about" data-role="about-skill">
+                    <h3>Pawtector</h3>
+                    <p>Type: damage</p>
+                    <p>
+                      Michele depolys a Pawtector that can stick to any surfaces from a certain range. The Pawtector
+                      will automatically attack the enemy once they get into the range of the pawtector. The Pawtector
+                      will deactive once michele reaches a certain range away from it.
+                    </p>
+                  </div>
+                </div>
+                <div id="details">
+                  <h4>Details</h4>
+                  <ul>
+                    <li>Amount: 2/3 with upgrades</li>
+                    <li>Cooldown: 40</li>
+                    <li>Cooldown starts when a pawtector is destroyed or when all is placed</li>
+                    <li>Hp: 45</li>
+                    <li>Attack Range: 8</li>
+                    <li>Summon Range: 25 meters</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <video width="400" controls loop>
+                    <source src="/public/agents/michele/Michele Active Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="passive-skill">
+                <div id="about">
+                  <h3>Kitty Tracer</h3>
+                  <p>Type: detect</p>
+                  <p>Allows her to see enemies that inflicts damagge towards her with any weapon</p>
+                </div>
+                <div id="details">
+                  <h4>Details</h4>
+                  <ul>
+                    <li>The detectation only lasts for 2 seconds and can only be seen by Michele.</li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <video width="400" controls loop>
+                    <source src="/public/agents/michele/Michele Passive Vid.mp4" />
+                  </video>
+                </div>
+              </div>
+              <div id="ultimate-skill">
+                <div id="about">
+                  <h3>Mighty MeowBlast</h3>
+                  <p>Type: damage</p>
+                  <p>Michele throws a powerful turret into the battlefield that auto-attacks nearby enemies</p>
+                </div>
+                <div id="details">
+                  <h4>Details</h4>
+                  <ul>
+                    <li>It can only attack one enemy at a time</li>
+                    <li>Cost: 7 Ultimate Points</li>
+                    <li>
+                      Mighty Meowbot attacks in 2 phases. The first phase last around 1.25 seconds and deals 2 damage 15
+                      times. The second phase involves a 0.1 charge time before doing 45 damage to the enemy
+                    </li>
+                    <li>
+                      Mighty Meowbot can die in 2 ways. The first way is the moment that it is thrown, there is a 32
+                      second countdown before it despawns. The second way is if it is destroy by enemy, Meowbot has
+                      750hp.
+                    </li>
+                    <li>
+                      Mighty Meowbot attack range is its line of sight, which allows it to attack from very far
+                      distances with a maximun range of 50 meters.
+                    </li>
+                  </ul>
+                </div>
+                <div id="video">
+                  <video width="400" controls loop>
+                    <source src="/public/agents/michele/Michele Ultimate Vid.mp4" />
+                  </video>
+                </div>
+              </div>
             </div>
           </div>
-        <div class="active-deatils" data-role="details">
-          <h4>Details</h4>
-            <ul>
-              <li>Amount: 2/3 with upgrades</li>
-              <li>Cooldown: 40</li>
-              <li>Cooldown starts when a pawtector is destroyed or when all is placed</li>
-              <li>Hp: 45</li>
-              <li>Attack Range: 8</li>
-              <li>Summon Range: 25 meters</li>
-            </ul>
-        </div>
-       <div class="active-video" data-role="video">
-          <video width="400" controls loop>
-            <source src="/public/agents/michele/Michele Active Vid.mp4" />
-          </video>
-         </div>
-        <div id="passive-skill" data-role="passive-skill" >
-          <div id="passive-about" data-role="about-skill">
-            <h3>Kitty Tracer</h3>
-            <p>Type: detect</p>
-            <p>Allows her to see enemies that inflicts damagge towards her with any weapon</p>
-          </div>
-          <div id="passive-deatils" data-role="details">
-            <h4>Details</h4>
-            <ul>
-              <li>The detectation only lasts for 2 seconds and can only be seen by Michele.</li>
-           </ul>
-          </div>
-          <div id="passive-video" data-role="video">
-            <video width="400" controls loop>
-              <source src="/public/agents/michele/Michele Passive Vid.mp4" />
-            </video>
-          </div>
-        </div>
-        <div id="ultimate-skll" data-role="ultimate-skill">
-          <div id="ultimate-about" data-role="about-skill">
-            <h3>Mighty MeowBlast</h3>
-            <p>Type: damage</p>
-            <p>Michele throws a powerful turret into the battlefield that auto-attacks nearby enemies</p>
-          </div>
-          <div id="ultimate-deatils" data-role="details">
-            <h4>Details</h4>
-            <ul>
-              <li>It can only attack one enemy at a time</li>
-              <li>Cost: 7 Ultimate Points</li>
-              <li>
-                Mighty Meowbot attacks in 2 phases. The first phase last around 1.25 seconds and deals 2 damage 15 times.
-                The second phase involves a 0.1 charge time before doing 45 damage to the enemy
-            </li>
-             <li>
-                Mighty Meowbot can die in 2 ways. The first way is the moment that it is thrown, there is a 32 second
-                countdown before it despawns. The second way is if it is destroy by enemy, Meowbot has 750hp.
-              </li>
-              <li>
-                Mighty Meowbot attack range is its line of sight, which allows it to attack from very far distances with a
-                maximun range of 50 meters.
-              </li>
-            </ul>
-          </div>
-          <div id="ultimate-video" data-role="video">
-          <video width="400" controls  loop>
-            <source src="/public/agents/michele/Michele Ultimate Vid.mp4" />
-          </video>
-          </div>
-        </div>
-        <div id="weapons" data-role="weapon">
-          <h3>Primary Gun: Inspector</h3>
+          <div id="weapons" data-role="weapon">
+            <h3>Primary Gun: Inspector</h3>
             <img src="/public/agents/michele/Michele's Gun Inspector.webp" />
-          <p>
-            Michele main gun, Inspector, has a maganize of 30 and damage based on the distance of the enemy is. This gun has
-            a great balance of recoil, spread, and firing rate allowing it to be one of the best weapons in the game.
-          </p>
-        </div>
-        <div id="upgrades" data-role="upgrades">
-          <h2>Upgrades</h2>
-          <img src="/public/shared/Firing.png" loading="lazy" />
-          <img src="/public/shared/Accuracy.png" loading="lazy" />
-          <img src="/public/shared/Critical Hit.png" loading="lazy" />
-          <img src="/public/shared/Capacity.png" loading="lazy" />
+            <p>
+              Michele main gun, Inspector, has a maganize of 30 and damage based on the distance of the enemy is. This
+              gun has a great balance of recoil, spread, and firing rate allowing it to be one of the best weapons in
+              the game.
+            </p>
+          </div>
+          <div id="upgrades" data-role="upgrades">
+            <h2>Upgrades</h2>
+            <img src="/public/shared/Firing.png" loading="lazy" />
+            <img src="/public/shared/Accuracy.png" loading="lazy" />
+            <img src="/public/shared/Critical Hit.png" loading="lazy" />
+            <img src="/public/shared/Capacity.png" loading="lazy" />
             <img src="/public/agents/michele/Michele Active Upgrade.png" loading="lazy" />
-          <img src="/public/agents/michele/Michele Passive Upgrade.png" loading="lazy" />
-          <img src="/public/shared/Armor.png" loading="lazy" />
-          <img src="/public/shared/Stringify.png" loading="lazy" />
+            <img src="/public/agents/michele/Michele Passive Upgrade.png" loading="lazy" />
+            <img src="/public/shared/Armor.png" loading="lazy" />
+            <img src="/public/shared/Stringify.png" loading="lazy" />
+          </div>
         </div>
-         <script src="all-agent.js"></script>
       </div>
     </div>
+
+    <script src="../all-agent.js"></script>
   </body>
 </html>
